--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       }
       li{list-style-type:none;}
     </style>
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">-->
+
   </head>
   <body>
 
